feat: 검색창 하단 인기 검색어, 최근 검색어, 자동완성 컴포넌트 틀 작업

--- a/src/public/sass/_global.scss
+++ b/src/public/sass/_global.scss
@@ -21,6 +21,15 @@ $private-menu-content-height: 363px;
 $private-menu-btn-width: 75px;
 $private-menu-btn-height: 20px;
 
+$header-height: 213px;
+$search-width: 670px;
+$search-height: 54px;
+$search-info-height: 300px;
+$search-top10-height: 22px;
+$search-padding-left: 31px;
+$search-margin-bottom: 25px;
+$search-keyword-items-height: 30px;
+
 $button-padding: 20px;
 %border-basic {
   border: 1px solid #e4e2e2;
