--- a/src/public/sass/headerTop.scss
+++ b/src/public/sass/headerTop.scss
@@ -1,47 +1,50 @@
-$search-width: 670px;
-$search-height: 54px;
-$search-top10-height: 22px;
-$search-padding-left: 31px;
+.header {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: $header-height;
+  background-color: white;
+  z-index: 2;
 
-.header-top {
-  display: flex;
-  padding-top: 60px;
-  justify-content: center;
-
-  .title {
+  .header-top {
     display: flex;
-    align-items: center;
-    margin-right: 50px;
-  }
+    padding-top: 60px;
+    justify-content: center;
 
-  .search {
-    display: flex;
-    position: relative;
-    width: $search-width;
-    height: $search-height;
-
-    form {
+    .title {
       display: flex;
-      border: 1px solid #cecfd1;
-      border-radius: 10px;
-      position: relative;
-      margin-right: 24px;
-      .search__input {
-        width: $search-width;
-        height: $search-height;
-        padding: 10px;
-        padding-left: $search-padding-left;
-        z-index: 1;
-        font-weight: 700;
-        font-size: 20px;
-        line-height: 22px;
-        color: #303030;
-      }
+      align-items: center;
+      margin-right: 50px;
+    }
 
-      .search__icon {
-        font-size: 1.4rem;
-        padding: 10px;
-      }
+    .search {
+      display: flex;
+      position: relative;
+      width: $search-width;
+      height: $search-height;
+
+      form {
+        display: flex;
+        border: 1px solid #cecfd1;
+        border-radius: 10px;
+        position: relative;
+        margin-right: 24px;
+        height: $search-height;
+        .search__input {
+          width: $search-width;
+          height: $search-height;
+          padding: 10px;
+          padding-left: $search-padding-left;
+          z-index: 1;
+          font-weight: 700;
+          font-size: 20px;
+          line-height: 22px;
+          color: #303030;
+        }
+        .search__icon {
+          font-size: 1.4rem;
+          padding: 10px;
+        }
         .search__info--wrap {
           width: 100%;
           height: 300px; // 임시
@@ -133,22 +136,23 @@ $search-padding-left: 31px;
           }
         }
       }
-    .top10-wrap {
-      width: $search-width;
-      height: $search-top10-height;
-      overflow: hidden;
-      position: absolute;
-      top: 16px;
-      left: $search-padding-left;
-    }
-    .search-top10__item {
-      height: 22px;
-      font-weight: 700;
-      font-size: 20px;
-      line-height: 22px;
-      color: #939393;
-      text-overflow: ellipsis;
+      .top10-wrap {
+        width: $search-width;
+        height: $search-top10-height;
+        overflow: hidden;
+        position: absolute;
+        top: 16px;
+        left: $search-padding-left;
+      }
+      .search-top10__item {
+        height: 22px;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 22px;
+        color: #939393;
+        text-overflow: ellipsis;
         white-space: nowrap;
+      }
     }
   }
 }
