feat. 연관검색어 제공

--- a/client/styles/headerSearchBar.scss
+++ b/client/styles/headerSearchBar.scss
@@ -126,3 +126,17 @@
     background-position: -150px -55px;
   }
 }
+
+.autoCompleteContent {
+  & > * {
+    margin-bottom: 0.5rem;
+  }
+
+  a {
+    display: block;
+  }
+
+  .txt__hightlight {
+    color: $red-300;
+  }
+}
