--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -52,7 +52,7 @@
         }
     }
 
-    .search-below {
+    .search-modal {
         width: 670px;
         border-radius: 10px;
         @extend %border-highlight;
@@ -62,29 +62,29 @@
         z-index: 2;
         visibility: hidden;
 
-        .search-below__container {
-            .search-below__section {
+        .search-modal__container {
+            .search-modal__section {
                 padding: 30px;
                 font-size: 15px;
 
-                .search-below__vertical-container {
+                .search-modal__vertical-container {
                     display: flex;
                     flex-direction: column;
                 }
             }
 
-            .search-below__section--top10 {
+            .search-modal__section--top10 {
                 @extend %grid-row-2;
             }
 
-            .search-below__title {
+            .search-modal__title {
                 color: $darkGray;
                 font-weight: bold;
                 font-size: 1rem;
             }
-            .search-below__content {
+            .search-modal__content {
                 padding-top: 10px;
-                .search-below__keyword {
+                .search-modal__keyword {
                     height: 40px;
                     .rank-keyword__numbering {
                         font-weight: bold;
@@ -92,7 +92,7 @@
                 }
             }
 
-            .search-below__recent-keyword {
+            .search-modal__recent-keyword {
                 padding: 5px;
             }
         }
@@ -100,7 +100,7 @@
 
     .search.focus {
         @extend %border-highlight;
-        .search-below {
+        .search-modal {
             visibility: visible;
         }
     }
