feat: 검색창 최근 검색어 제시 기능 구현

--- a/src/components/Header/HeaderMenu/index.scss
+++ b/src/components/Header/HeaderMenu/index.scss
@@ -97,6 +97,11 @@ $button-padding: 20px;
         }
       }
     }
+    .show {
+      .recent_product .arrow {
+        background-position: -60px -70px;
+      }
+    }
   }
 }
 
