--- a/client/src/components/header/headerTop/searchBar.scss
+++ b/client/src/components/header/headerTop/searchBar.scss
@@ -40,6 +40,7 @@
 
 .top-container {
   top: 50%;
+  left: 5%;
   transform: translate(0%, -50%);
   position: absolute;
   overflow: hidden;
@@ -53,12 +54,14 @@
     margin: 0;
 
     li {
+      text-align: start;
       height: 100%;
       vertical-align: middle;
   
       span:nth-child(odd)  {
+        font-weight: 700;
         font-style: italic;
-        font-weight: bold;
+        font-family: robotoitalic, Apple SD Gothic Neo, Malgun Gothic, 맑은 고딕, Dotum, 돋움, sans-serif;
         margin-right: 5px;
       }
   
