Add: mEtc notice UI

--- a/packages/web/src/sass/icon.scss
+++ b/packages/web/src/sass/icon.scss
@@ -92,3 +92,10 @@
   background-position: -150px -58px;
   float: right;
 }
+.ico_new {
+  background-position: 100% -650px;
+  width: 15px;
+  height: 15px;
+  margin-top: -1px;
+  margin-left: 5px;
+}
