feat: localStorage에 최근 본 상품 저장 및 조회 기능 구현

--- a/src/components/Header/HeaderMenu/index.scss
+++ b/src/components/Header/HeaderMenu/index.scss
@@ -97,6 +97,9 @@ $button-padding: 20px;
         }
       }
     }
+    .recently_viewed {
+      position: relative;
+    }
     .show {
       .recent_product .arrow {
         background-position: -60px -70px;
