--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -244,7 +244,13 @@
         .section-title {
             @extend %h2-title;
         }
-        .goods-stall__title,
+        .goods-stall__title {
+            @extend %text-block;
+            width: 100%;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
         .goods-stall__detail-price {
             @extend %text-block;
         }
@@ -262,6 +268,11 @@
                     @extend %text-bold;
                 }
             }
+        }
+
+        .goods-stall__img {
+            width: 200px;
+            height: 200px;
         }
 
         .goods-stall__detail-price {
