feat: 상품을 선택하면 productClickEvent를 발생시켜 정보를 전달하도록 구현

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -241,6 +241,10 @@
         @extend %section-layout;
         margin-top: 60px;
 
+        .goods-stall__link {
+            cursor: pointer;
+        }
+
         .section-title {
             @extend %h2-title;
         }
