검색 시 검색결과 글자 하이라이팅 추가

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -181,6 +181,10 @@ strong {
   font-style: italic;
 }
 
+.wrap_suggestion .inner_suggestion .list_result .highlight {
+  color: #f95139;
+}
+
 .header-menu {
   height: 55px;
   display: flex;
