--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -197,23 +197,31 @@
     </div>
     <div class="recommendation">
       <p>이 상품 어때요?</p>
-      <ul class="picked-items">
-        <li class="picked-items__item">
-          <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
-        </li>
-        <li class="picked-items__item">
-          <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
-        </li>
-        <li class="picked-items__item">
-          <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
-        </li>
-        <li class="picked-items__item">
-          <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
-        </li>
-        <li class="picked-items__item">
-          <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
-        </li>
-      </ul>
+      <div class="picked__container">
+        <ul class="picked-items">
+          <li class="picked-items__item">
+            <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
+          </li>
+          <li class="picked-items__item">
+            <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
+          </li>
+          <li class="picked-items__item">
+            <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
+          </li>
+          <li class="picked-items__item">
+            <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
+          </li>
+          <li class="picked-items__item">
+            <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
+          </li>
+        </ul>
+        <button class="picked__left-btn">
+          <span class="picked__left-btn-icon"></span>
+        </button>
+        <button class="picked__right-btn">
+          <span class="picked__right-btn-icon"></span>
+        </button>
+      </div>
       <ul class="recommendation-items hidden">
       </ul>
     </div>
