--- a/src/public/sass/headerMenu.scss
+++ b/src/public/sass/headerMenu.scss
@@ -2,11 +2,14 @@
   height: 60px;
   display: flex;
   border: 1px solid #cbcbcb;
-  max-width: 1270px;
+  width: 100%;
   margin: 40px auto;
   padding-left: 30px;
   padding-right: 30px;
   box-sizing: border-box;
+  font-size: 20px;
+  font-weight: 700;
+  font-family: 돋움, dotum, sans-serif;
   .category {
     position: relative;
     .category__title {
@@ -122,13 +125,15 @@
       cursor: pointer;
       button {
         width: $private-menu-btn-width;
+        span {
+          color: blue;
+        }
       }
       .private-menu__content {
         display: none;
         position: absolute;
         flex-direction: column;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding: 20px;
         top: calc($button-padding * 2 + 1rem);
         left: calc(-1 * $private-menu-content-width + $private-menu-btn-width + 72px);
         width: $private-menu-content-width;
@@ -138,6 +143,10 @@
         background-color: white;
         .private-menu__title {
           height: $private-menu-btn-height;
+          width: 100px;
+          font-size: 16px;
+          font-weight: 400;
+          text-align: center;
           margin-top: $private-menu-btn-height/2;
           margin-bottom: $private-menu-btn-height/2;
         }
@@ -145,8 +154,7 @@
           display: flex;
           flex-wrap: wrap;
           img {
-            margin-left: 20px;
-            margin-right: 20px;
+            margin-right: 30px;
             margin-top: 15px;
           }
         }
