--- a/src/public/sass/headerTop.scss
+++ b/src/public/sass/headerTop.scss
@@ -43,7 +43,9 @@
         }
         .search__icon {
           font-size: 1.4rem;
+          cursor: pointer;
           padding: 10px;
+          z-index: 2;
         }
         .search__info--wrap {
           width: 100%;
@@ -60,6 +62,7 @@
           .search__recent {
             width: 50%;
             padding: 20px;
+            overflow-y: hidden;
             .search__recent--title {
               margin-bottom: $search-margin-bottom;
               font-size: 16px;
@@ -74,7 +77,7 @@
                 margin-bottom: 10px;
                 display: flex;
                 justify-content: space-between;
-                button {
+                .btn {
                   color: red;
                   cursor: pointer;
                 }
@@ -132,6 +135,15 @@
               height: $search-keyword-items-height;
               width: 100%;
               font-size: large;
+              span {
+                font-weight: 700;
+                color: #f95139;
+              }
+            }
+            .search__auto--none {
+              font-weight: 600;
+              font-size: large;
+              color: #f95139;
             }
           }
         }
