--- a/src/scss/common/search_bar_common.module.scss
+++ b/src/scss/common/search_bar_common.module.scss
@@ -1,1 +1,6 @@
 $search-bar-left-margin: 30px;
+$search-bar-width: 500px;
+
+$border: 1px solid rgba(0, 0, 0, 0.2);
+$highlight-border: 1px solid rgba(255, 0, 0, 0.5);
+$border-radius: 10px;
