--- a/src/scss/ComponentStyles/InputWithTopRankingGoods.module.scss
+++ b/src/scss/ComponentStyles/InputWithTopRankingGoods.module.scss
@@ -1,27 +1,37 @@
 @use "../common/search_bar_common.module" as search-bar;
 
 .component {
-  display: flex;
-  position: relative;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  align-items: center;
-  border-radius: 10px;
+  border: search-bar.$border;
+  border-radius: search-bar.$border-radius;
   
-  form {
+  .container {
     display: flex;
+    width: search-bar.$search-bar-width;
+    position: relative;
     align-items: center;
-    height: 100%;
     
-    .search-input {
-      width: 400px;
+    form {
+      display: flex;
+      width: 100%;
+      align-items: center;
       height: 100%;
-      font-size: 1.4rem;
-      padding-left: search-bar.$search-bar-left-margin;
-    }
-    
-    .search-icon {
-      font-size: 1.4rem;
-      padding: 10px;
+      
+      .search-input {
+        width: 100%;
+        height: 100%;
+        font-size: 1.4rem;
+        padding-left: search-bar.$search-bar-left-margin;
+      }
+      
+      .search-icon {
+        font-size: 1.4rem;
+        padding: 10px;
+      }
     }
   }
+  
+}
+
+.highlight-border {
+  border: search-bar.$highlight-border;
 }
