--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -4,14 +4,19 @@
   text-align: center;
   min-width: 977px;
   display: flex;
-  justify-content: center;
-  height: 60px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header-top-container {
+  height: 60px;
   display: flex;
 }
 
 .header-bottom-container {
-
+  width: 100%;
+  margin-top: 40px;
+  height: 50px;
+  border-top: 1px solid #efefef;
+  box-shadow: 0 1px rgb(0 0 0 / 16%);
 }
