--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -31,14 +31,16 @@
       }
     }
 
-    .search-top10-list {
-      position: absolute;
-      transform: translateY(50%);
-      left: 10px;
-      font-size: 1.2rem;
-      height: 50%;
-      display: flex;
-      flex-direction: column;
+    .search-top10-box {
+      overflow: hidden;
+
+      .search-top10-list {
+        position: absolute;
+        left: 10px;
+        font-size: 1.2rem;
+        height: 50%;
+        flex-direction: column;
+      }
     }
   }
 }
