Highlight current keyword in autocomplete keywords

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -95,7 +95,7 @@
                 padding: 10px 0;
                 font-weight: bold;
             }
-            &__autocomplete-highligh {
+            &__autocomplete-highlight {
                 font-weight: bold;
                 color: red;
             }
