--- a/src/javascripts/Components/Goods/styles/RecentlyRelatedGoods.module.scss
+++ b/src/javascripts/Components/Goods/styles/RecentlyRelatedGoods.module.scss
@@ -1,4 +1,4 @@
-@use '../common/component_common' as common;
+@use "../../../../scss/common/component_common" as common;
 
 .component {
   width: 100%;
