--- a/src/javascripts/Components/SearchBar/styles/InputWithTopRankingGoods.module.scss
+++ b/src/javascripts/Components/SearchBar/styles/InputWithTopRankingGoods.module.scss
@@ -1,4 +1,4 @@
-@use "../common/search_bar_common.module" as search-bar;
+@use "../../../../scss/common/search_bar_common.module" as search-bar;
 
 .component {
   border: search-bar.$border;
