--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -15,15 +15,16 @@
         display: flex;
         position: relative;
         border: 1px solid #808080;
-        border-radius: 100px;
+        border-radius: 4px;
         padding: 0 10px;
+        z-index: 100;
         overflow: hidden;
 
         form {
             display: flex;
 
             .search__input {
-                width: 400px;
+                width: 600px;
                 height: 60px;
                 padding: 10px;
             }
@@ -45,10 +46,58 @@
             flex-direction: column;
             z-index: -1;
             height: 100%;
+            
             &__item {
                 display: block;
                 line-height: 60px;
                 color: $strongGreyColor;
+            }
+        }
+
+        .search-info {
+            position: absolute;
+            display: flex;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            border: 1px solid #808080;
+            border-radius: 4px;
+            background-color: white;
+
+            &__container {
+                padding: 8px;
+                user-select: none;
+                flex: 1;
+            }
+            &__container-title {
+                font-weight: bold;
+                font-size: 1.1rem;
+                color: $weakGreyColor;
+            }
+            &__recent-keyword {
+                padding: 10px 0;
+                font-weight: bold;
+                color: $strongGreyColor;
+            }
+            &__hot-keyword-container {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: repeat(5, 1fr);
+                grid-auto-flow: column;
+            }
+            &__hot-keyword {
+                padding: 10px 0;
+            }
+            &__hot-keyword-rank {
+                font-weight: bold;
+            }
+            &__autocomplete-item {
+                padding: 10px 0;
+                font-weight: bold;
+            }
+            &__autocomplete-highlight {
+                font-weight: bold;
+                color: red;
             }
         }
     }
